# demerzel_wall_unit

./: .gitignore  README.md
docs/: pinout.md
firmware/esp-idf/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/esp-idf/components/audio_in/: CMakeLists.txt  audio_in.c  audio_in.h
firmware/esp-idf/components/audio_out/: CMakeLists.txt  audio_out.c  audio_out.h
firmware/esp-idf/components/bme280/: CMakeLists.txt  bme280.c  bme280.h
firmware/esp-idf/components/ld2410c/: CMakeLists.txt  ld2410c.c  ld2410c.h
firmware/esp-idf/components/opus_encoder/: CMakeLists.txt  opus_stream.c  opus_stream.h
firmware/esp-idf/components/pir/: CMakeLists.txt  pir.c  pir.h
firmware/esp-idf/components/status_led/: CMakeLists.txt  status_led.c  status_led.h
firmware/esp-idf/components/wake_word/: CMakeLists.txt  frontend_handroll.c  frontend_tflm.cc  wake_word.cc  wake_word_frontend.h
firmware/esp-idf/components/wake_word/include/: wake_word.h
firmware/esp-idf/components/ws_client/: CMakeLists.txt  ws_client.c  ws_client.h
firmware/esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  followup.c  followup.h  http_client.c  http_client.h  idf_component.yml  log_server.c  log_server.h  main.c  ota.c  ota.h  voice_turn.c  voice_turn.h  wake_word_task.c  wake_word_task.h  wav_util.c  wav_util.h  wifi.c  wifi.h
models/wake_word_yo_demerzel_v1/: best_weights.weights.h5  last_weights.weights.h5  stream_state_internal_quant.tflite  tflite_streaming_roc.txt  training_config.yaml  validate.py
models/wake_word_yo_demerzel_v1/recordings/negatives/: .gitkeep  _room_let_tv__conversation_play_01.raw  _room_silence__say_nothing_01.raw  dan_damsel_01.raw  dan_demerit_01.raw  dan_denzel_01.raw  dan_dim_the_room_01.raw  dan_hey_dim_the_lights_01.raw  dan_hey_dim_the_lights_02.raw  dan_yo_mama_01.raw  dan_yo_there_01.raw
models/wake_word_yo_demerzel_v1/recordings/positives/: .gitkeep  dan_yo_demerzel_01.raw  dan_yo_demerzel_02.raw  dan_yo_demerzel_03.raw  dan_yo_demerzel_04.raw  dan_yo_demerzel_05.raw  dan_yo_demerzel_06.raw  dan_yo_demerzel_07.raw  dan_yo_demerzel_08.raw  dan_yo_demerzel_09.raw  dan_yo_demerzel_10.raw  dan_yo_demerzel_11.raw
server/: composer.py  router.py  test_tools.py  test_voice_server.py  test_ws.py  tools.py  voice_server.py
server/systemd/: demerzel-voice-server.service  little-timmy-os.service  llama-3b-server.service  whisper-server.service
tests/: boot.py.template  debug_mic_noise.py  gui_dwu_stt.py  gui_record_wakeword.py  play_audio.py  record_and_transcribe.py  record_speech.py  record_wakeword.py  test_amp.py  test_bme280.py  test_ld2410c.py  test_loopback.py  test_mic.py  test_neopixel.py  test_pir.py  voice_turn.py
tools/sketches/inmp441_test/: inmp441_test.ino
